# CounterFit

./: README.md
counterfit-app/: MANIFEST.in  README.md  setup.cfg
counterfit-app/src/CounterFit/: __init__.py  __main__.py  counterfit.py  sensors.py
counterfit-app/src/CounterFit/static/: style.css
counterfit-app/src/CounterFit/templates/: boolean_sensor.html  float_sensor.html  home.html  led_actuator.html
images/: Artwork.sketch
shims/grove/: README.md  setup.py
shims/grove/tests/: test_grove_led.py  test_grove_light_sensor_v1_2.py
shims/grove/virtualiot_shims_grove/: __init__.py  grove_led.py  grove_light_sensor_v1_2.py  virtual_iot_connection.py
test-harness/: app.py  virtualiotdevices.py
virtual-device/: app.py  requirements.txt  sensors.py  setup.py
virtual-device/static/: style.css
virtual-device/templates/: boolean_sensor.html  float_sensor.html  home.html  led_actuator.html
