[metadata]
name = CounterFit
version = attr: CounterFit.__version__
url = https://github.com/jimbobbennett/CounterFit
project_urls =
    Documentation = https://github.com/jimbobbennett/CounterFit
    Source Code = https://github.com/jimbobbennett/CounterFit
    Issue Tracker = https://github.com/jimbobbennett/CounterFit/issues
    Twitter = https://twitter.com/JimBobBennett
license = MIT
author = Jim Bennett
maintainer = Jim Bennett
description = A virtual IoT hardware simulator.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
        Development Status :: 2 - Pre-Alpha,
        Intended Audience :: Developers,
        Topic :: Software Development :: Libraries,
        Topic :: System :: Hardware,
        License :: OSI Approved :: MIT License,
        Programming Language :: Python :: 3,
        Programming Language :: Python :: 3.6,
        Programming Language :: Python :: 3.7,
        Programming Language :: Python :: 3.8,
        Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    counterfit = CounterFit.counterfit:main